<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/arrowUp1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="@string/arrowup"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/arrowLeft1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_up" />

    <ImageView
        android:id="@+id/arrowDown1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/arrowdown"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowRight1"
        app:srcCompat="@drawable/arrow_down" />

    <ImageView
        android:id="@+id/arrowLeft1"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/arrowleft"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrowDown1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <ImageView
        android:id="@+id/arrowRight1"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/arrowright"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrowUp1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_right" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flightFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/flight"
        android:contentDescription="@string/flightbutton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/downFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/down"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/flightFAB"
        app:layout_constraintEnd_toEndOf="@+id/flightFAB"
        app:srcCompat="@drawable/down" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/upFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/up"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/downFAB"
        app:layout_constraintEnd_toEndOf="@+id/downFAB"
        app:srcCompat="@drawable/up" />

    <TextView
        android:id="@+id/sendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/command"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sendView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sendTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sendTextView"
        app:layout_constraintTop_toTopOf="@+id/sendTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>